--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.3.2 [2012-10-08]:
+- Add ... to generic definiton of calibrate.
+
 Version 1.3.1 [2012-10-07]:
 - Change demo licences.
 
