--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.3.3 [2012-10-12]:
+- estimateNoise: add method argument, change return value to two column matrix.
+- Add .estimateNoiseMad (same implementation as old estimateNoise method),
+  .estimateNoiseSuperSmoother.
+
 Version 1.3.2 [2012-10-08]:
 - Add ... to generic definiton of calibrate.
 
