--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.3.5 [2012-10-13]:
+- detectPeaks: new example for a custom noise estimation function.
+
 Version 1.3.4 [2012-10-13]:
 - Add slot "snr" to MassPeaks.
 - detectPeaks: change internal snr handling.
