--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.3.6 [2012-10-13]:
+- mergeMassPeaks/mergeMassSpectra: merge metaData, too.
+
 Version 1.3.5 [2012-10-13]:
 - detectPeaks: new example for a custom noise estimation function.
 
