--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.3.7 [2012-10-14]: 
+- labelPeaks: remove tolerance argument (now always select the closest one)
+
 Version 1.3.6 [2012-10-13]:
 - mergeMassPeaks/mergeMassSpectra: merge metaData, too.
 
