--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.3.8 [2012-10-14]:
+- show: rewrite (OO design)
+
 Version 1.3.7 [2012-10-14]: 
 - labelPeaks: remove tolerance argument (now always select the closest one)
 
