--- a/NEWS
+++ b/NEWS
@@ -1,36 +1,20 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
-Version 1.3.9 [2012-10-20]:
+Version 1.4 [2012-10-30]:
+- Add slot "snr" to MassPeaks.
+- Change demo licences.
 - binPeaks/referencePeaks: add argument method=c("strict", "relaxed"); "relaxed"
   allows multiple peaks of the same spectrum in a bin.
-
-Version 1.3.8 [2012-10-14]:
-- show: rewrite (OO design)
-
-Version 1.3.7 [2012-10-14]: 
-- labelPeaks: remove tolerance argument (now always select the closest one)
-
-Version 1.3.6 [2012-10-13]:
+- labelPeaks: remove tolerance argument (now always select the closest one).
 - mergeMassPeaks/mergeMassSpectra: merge metaData, too.
-
-Version 1.3.5 [2012-10-13]:
 - detectPeaks: new example for a custom noise estimation function.
-
-Version 1.3.4 [2012-10-13]:
-- Add slot "snr" to MassPeaks.
 - detectPeaks: change internal snr handling.
-
-Version 1.3.3 [2012-10-12]:
-- estimateNoise: add method argument, change return value to two column matrix.
 - Add .estimateNoiseMad (same implementation as old estimateNoise method),
   .estimateNoiseSuperSmoother.
-
-Version 1.3.2 [2012-10-08]:
-- Add ... to generic definiton of calibrate.
-
-Version 1.3.1 [2012-10-07]:
-- Change demo licences.
+- estimateNoise: add method argument, change return value to two column matrix.
+- show: rewrite (OO design).
+- calibrate: add ... to generic definiton of calibrate.
 
 Version 1.3 [2012-09-16]:
 - Add trim and [ methods.
