--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.4.1 [2012-11-01]:
+- Rewrite localMaxima in C to reduce running time and memory consumption
+
 Version 1.4 [2012-10-30]:
 - Add slot "snr" to MassPeaks.
 - Change demo licences.
