--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,12 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.4.2 [2012-11-03]:
+- detectPeaks: only throw an error if windowSize > length (windowSize == length
+  is no error anymore).
+
 Version 1.4.1 [2012-11-01]:
-- Rewrite localMaxima in C to reduce running time and memory consumption
+- Rewrite localMaxima in C to reduce running time and memory consumption.
 
 Version 1.4 [2012-10-30]:
 - Add slot "snr" to MassPeaks.
