--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.4.5 [2012-11-26]:
+- .doByLabels: drop unused levels of argument "labels" (type: factor);
+  affected functions: filterPeaks, mergeMassPeaks, mergeMassSpectra.
+
 Version 1.4.4 [2012-11-15]:
 - labelPeaks: add labels argument.
 
