--- a/NEWS
+++ b/NEWS
@@ -1,28 +1,20 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
-Version 1.4.5 [2012-11-26]:
-- .doByLabels: drop unused levels of argument "labels";
-  affected functions: filterPeaks, mergeMassPeaks, mergeMassSpectra.
-
-Version 1.4.4 [2012-11-15]:
-- labelPeaks: add labels argument.
-
-Version 1.4.3 [2012-11-15]:
+Version 1.5 [2012-12-06]:
 - Add movingAverage.
-
-Version 1.4.2 [2012-11-03]:
+- labelPeaks: add labels argument.
 - detectPeaks: only throw an error if windowSize > length (windowSize == length
   is no error anymore).
-
-Version 1.4.1 [2012-11-01]:
+- .doByLabels: drop unused levels of argument "labels";
+  affected functions: filterPeaks, mergeMassPeaks, mergeMassSpectra.
 - Rewrite localMaxima in C to reduce running time and memory consumption.
 
 Version 1.4 [2012-10-30]:
 - Add slot "snr" to MassPeaks.
 - Change demo licences.
-- binPeaks/referencePeaks: add argument method=c("strict", "relaxed"); "relaxed"
-  allows multiple peaks of the same spectrum in a bin.
+- binPeaks/referencePeaks: add argument method=c("strict", "relaxed"); 
+  "relaxed" allows multiple peaks of the same spectrum in a bin.
 - labelPeaks: remove tolerance argument (now always select the closest one).
 - mergeMassPeaks/mergeMassSpectra: merge metaData, too.
 - detectPeaks: new example for a custom noise estimation function.
@@ -37,8 +29,8 @@ Version 1.3 [2012-09-16]:
 - Add trim and [ methods.
 - Fix isMassSpectrumList.
 - detectPeaks: add error message if windowSize >= length.
-- determineWarpingFunctions: add error message if it could not match any peak to
-  reference peaks.
+- determineWarpingFunctions: add error message if it could not match any peak 
+  to reference peaks.
 - labelPeaks: add avoidOverlap argument to avoid overlapping of peak labels.
 - labelPeaks: change default value for verticalOffset argument.
 - labelPeaks: remove family argument.
