--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ Version 1.5.3 [2013-02-05]:
 Version 1.5.2 [2013-02-05]:
 - .which.closest: rounding .5 to the next highest integer (before: to the next
   lowest one); affected functions: labelPeaks.
+- estimateBaseline(..., method="Median"): do not allow a window size > n
+  (fixes #4).
 
 Version 1.5.1 [2013-01-24]:
 - .doByLabels: fix an error that occurred if all labels were unique (fixes #1);
