--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.5.6.1 [2013-02-28]:
+- Change X11 call to avoid NOTE (on R CMD CHECK) on windows.
+
 Version 1.5.6 [2013-02-21]:
 - Implement TopHat baseline estimation in C.
 
