--- a/NEWS
+++ b/NEWS
@@ -1,30 +1,17 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
-Version 1.5.6.1 [2013-02-28]:
-- Change X11 call to avoid NOTE (on R CMD CHECK) on windows.
-
-Version 1.5.6 [2013-02-21]:
-- Implement TopHat baseline estimation in C.
-
-Version 1.5.5 [2013-02-17]:
+Version 1.6 [2013-03-01]:
 - Add interactive plot method: iplot.
-
-Version 1.5.4 [2013-02-17]:
-- Add TopHat baseline estimation: estimateBaseline(..., method="TopHat")
-
-Version 1.5.3 [2013-02-05]:
-- Include tests in inst/tests.
-
-Version 1.5.2 [2013-02-05]:
+- Add TopHat baseline estimation: estimateBaseline(..., method="TopHat")/
+  removeBaseline(..., method="TopHat").
 - .which.closest: rounding .5 to the next highest integer (before: to the next
   lowest one); affected functions: labelPeaks.
 - estimateBaseline(..., method="Median"): do not allow a window size > n
   (fixes #4).
-
-Version 1.5.1 [2013-01-24]:
 - .doByLabels: fix an error that occurred if all labels were unique (fixes #1);
   affected functions: filterPeaks, mergeMassPeaks, mergeMassSpectra.
+- Include tests in inst/tests.
 
 Version 1.5 [2012-12-06]:
 - Add movingAverage.
