--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.6.5 [2013-03-28]:
+- .estimateBaselineSnip: use a decreasing clipping window
+  (instead of an increasing one) to get a smoother baseline.
+
 Version 1.6.4 [2013-03-28]:
 - Add savitzkyGolay: Savitzky-Golay Smoothing Filter.
 
