--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.6.6 [2013-03-30]:
+- isEmpty: treat spectra with only zeros as intensity values as empty ones.
+
 Version 1.6.4 [2013-03-28]:
 - Add savitzkyGolay: Savitzky-Golay Smoothing Filter.
 
