--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,11 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.6.8 [2013-03-30]:
+- .mergeMetaData: fix merging of lists with different lengths; fixes #17.
+
 Version 1.6.7 [2013-03-30]:
-- totalIonCurrent<-: fix handling of empty spectra; fixes #15
+- totalIonCurrent<-: fix handling of empty spectra; fixes #15.
 
 Version 1.6.6 [2013-03-30]:
 - isEmpty: treat spectra with only zeros as intensity values as empty ones.
