--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,9 @@ RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
 Version 1.6.5 [2013-03-28]:
-- .estimateBaselineSnip: use a decreasing clipping window
-  (instead of an increasing one) to get a smoother baseline.
+- .estimateBaselineSnip: support decreasing/increasing clipping window;
+  controlled by new argument "decreasing"; use a decreasing window per default
+  to get a smoother baseline; (use decreasing=FALSE to get the old behaviour).
 
 Version 1.6.4 [2013-03-28]:
 - Add savitzkyGolay: Savitzky-Golay Smoothing Filter.
