--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.6.9 [2013-04-16]:
+- .doByLabels: preserve order of non-factor labels; fixes #19;
+  affected functions: filterPeaks, mergeMassPeaks, mergeMassSpectra.
+
 Version 1.6.8 [2013-03-30]:
 - .mergeMetaData: fix merging of lists with different lengths; fixes #17.
 
