--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.6.11 [2013-04-22]:
+- filterPeaks: add minNumber argument to allow an absolute threshold for
+  filtering; closes #21.
+
 Version 1.6.10 [2013-04-22]:
 - filterPeaks: doesn't round (floor) minFrequency argument anymore; led to
   unexpected results; fixes #22.
