replace paste(..., sep="") by paste0

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.6.14 [2013-05-02]:
+- Replace all paste(..., sep="") calls by paste0;
+  now MALDIquant depends on R >= 2.15.
+
 Version 1.6.13 [2013-05-02]:
 - createMassSpectrum: test for missing/filtered mass values and throw a
   warning if missing values are detected; fixes #23.
