--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,12 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.6.17 [2013-05-12]:
+- iplot: add horizontal distance measurement (using left mouse clicks).
+
 Version 1.6.16 [2013-05-12]:
 - Fix integer overflow in totalIonCurrent and isEmpty; fixes #25.
+- Add memory usage to "show" output.
 
 Version 1.6.14 [2013-05-02]:
 - Replace all paste(..., sep="") calls by paste0;
