Revert "BC: use TopHat as default; closes #18"
This reverts commit 33c2cb0f0b384c4f6508c9dc1c3eba16b91ab8bb.

Conflicts:
	DESCRIPTION
	NEWS
	man/MALDIquant-package.Rd

--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,7 @@ Version 1.99.2 [2013-04-07]:
 - Rewrite C code to support LongVectors; closes #13;
   now R>=3.0.0 is needed.
 
-Version 1.99.1 [2013-04-07]:
+Version 1.99.1 [2013-04-07] (revert):
 - Change: TopHat is new default baseline correction algorithm; closes #18.
   affected funtions: estimateBaseline, removeBaseline.
 
