--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.7.3 [2013-07-04]:
+- totalIonCurrent: fix calculation by estimating the integral; fixes #29.
+
 Version 1.7.2 [2013-07-04]:
 - .iplot: turn platform-specific functions into characters and use do.call to
   circumvent NOTE in R CMD check; closes #28.
