--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ Version 1.7.7 [2013-08-05]:
 - subset methods "[": little speed up by calling "which" to evaluate logical
   expressions only once.
 
+Version 1.7.5 [2013-07-29]:
+- approxfun: return NA for empty MassSpectrum objects.
+
 Version 1.7.4 [2013-07-24]:
 - deprecated: totalIonCurrent,MassPeaks
 
