--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.7.8 [2013-08-05]:
+- src/snip.c: fix some segmention faults because of a missing
+  PROTECT for "duplicate" call.
+
 Version 1.7.7 [2013-08-05]:
 - subset methods "[": little speed up by calling "which" to evaluate logical
   expressions only once.
