--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,11 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.99.5 [2013-08-29]:
+- Add C implementation of colMedians.
+
 Version 1.99.4 [2013-08-29]:
-- merge current master into 2.0
+- Merge current master into 2.0
 
 Version 1.99.3 [2013-05-12]:
 - Change: slots mass, intensity and snr in MassSpectrum and MassPeaks are now
