--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.99.7 [2013-08-29]:
+- determineWarpingPeaks: add example with user defined reference/calibration
+  peaks to the manual page.
+
 Version 1.99.6 [2013-08-29]:
 - Add case insensitive .match.arg.
 
