--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.99.12 [2013-09-02]:
+- Remove deprecated functions: calibrate, standardizeTotalIonCurrent,
+  totalIonCurrent<-, totalIonCurrent for MassPeaks, iplot (use the
+  zoom package instead which provides a similar function), ltrim, rtrim.
+
 Version 1.99.11 [2013-09-02]:
 - Remove hidden imputeMass.
 
