--- a/NEWS
+++ b/NEWS
@@ -51,11 +51,6 @@ DEPRECATED ARGUMENTS/FUNCTIONS
 * `calibrate`: 
   use `calibrateIntensity(..., method="TIC")` instead to calibrate/normalize
   MassSpectrum objects.
-* `iplot`: because it throws NOTEs on CRAN's R CMD check and the most 
-  important function `grDevices::getGraphicEvents` behaves
-  different on Unix/Windows platform (some keys don't working) and contains some
-  nasty bugs, e.g.: https://bugs.r-project.org/bugzilla3/show_bug.cgi?id=15208
-  Also the "zoom" R package provides similar functionality.
 * `ltrim`/`rtrim`: use `trim(..., range=c(min, max))` instead.
 * `determineWarpingFunctions`, argument "warpingFunction": use "method" argument
   instead.
@@ -66,6 +61,14 @@ DEPRECATED ARGUMENTS/FUNCTIONS
 * `transformIntensity`, argument "fun": use "method" argument instead.  
 * `removeBaseline`, argument "fun": use "method" argument instead.  
 * `detectPeaks`, argument "fun": use "method" argument instead.  
+
+REMOVED FUNCTIONS
+
+* `iplot`: because it throws NOTEs on CRAN's R CMD check and the most 
+  important function `grDevices::getGraphicEvents` behaves
+  different on Unix/Windows platform (some keys don't working) and contains some
+  nasty bugs, e.g.: https://bugs.r-project.org/bugzilla3/show_bug.cgi?id=15208
+  Also the "zoom" R package provides similar functionality.
 
 BUG FIXES
 
@@ -83,8 +86,6 @@ INTERNAL CHANGES
 
 * Remove internal `imputeMass`.
 * Remove internal `.replaceNonEmptyMassObjects`.
-* `.iplot`: turn platform-specific functions into characters and use `do.call` 
-  to circumvent NOTE in R CMD check; closes #28.
 * `approxfun`: returns NA for empty MassSpectrum objects.
 * `[` (subset method): little speed up by calling `which` to evaluate logical
   expressions only once.
