integrate expressionMatrix into intensityMatrix

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.8.5 [2013-10-16]:
+- Integrate `expressionMatrix` into `intensityMatrix`; `intensityMatrix` now
+  interpolates missing peaks if corresponding spectrum is given.
+- Deprecated: intensityMatrix for MassSpectrum objects.
+
 Version 1.8.4 [2013-10-14]:
 - Add `expressionMatrix`.
 
