--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,11 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.8.9 [2013-10-22]:
+- demo/warping.R: adapt to current preferred workflow.
+
 Version 1.8.8 [2013-10-22]:
-- demo/peaks: add smoothing and a few plots.
+- demo/peaks.R: add smoothing and a few plots.
 
 Version 1.8.7 [2013-10-17]:
 - Add `alignSpectra`, a wrapper around `detectPeaks`,
