use which to turn logical index into an integer one

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.8.15 [2014-01-06]:
+- INTERNAL: `.as.binary.matrix` the use `which` results in a little speed
+  improvement;
+  affected functions: `filterPeaks`, `referencePeaks`
+
 Version 1.8.13 [2013-11-08]:
 - INTERNAL: remove `binPeaks` from `intensityMatrix`. You have to call
   `binPeaks` manually.
